microk8s-cluster/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 32007
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
      nodePort: 32443
  selector:
    app.kubernetes.io/name: argocd-server
